laborations/lab2/testsuite/good/var_mutation_init_pdec.cc
int main() {
  int a = 1;
  int b = --a;

  ++b;
  printInt(a);

  b++;
  printInt(a);

  --b;
  printInt(a);

  b--;
  printInt(a);

  b = 832;
  printInt(a);

  return 0;
}
