laborations/lab2/testsuite/bad/inc-pre-fun-app.cc
int x() { return 0; }

int main () {
  ++x();
  return 0;
}
